ogg and agv added

--- a/html/videos.html
+++ b/html/videos.html
@@ -39,7 +39,7 @@
 
 
 
-			<!-- NAV 
+			<!-- NAV
 			Páginas que necesito -->
 			<nav id="nav" class="bg-naranja">
 
@@ -88,7 +88,7 @@
 
 				<!-- Noticias Populares -->
 				<section id="noticiasPopulares">
-					
+
 					<!-- noticia -->
 					<article class="noticia">
 						<figure>
@@ -106,7 +106,7 @@
 
 					<!-- noticia -->
 					<article class="noticia">
-						<figure> 
+						<figure>
 							<a href="">
 								<img src="../imagenes/noticias/windows7_aside_100x63.jpg" alt="Noticia aside">
 							</a>
@@ -121,7 +121,7 @@
 
 					<!-- noticia -->
 					<article class="noticia">
-						<figure> 
+						<figure>
 							<a href="">
 								<img src="../imagenes/noticias/minecraft_aside_100x63.jpg" alt="Noticia aside">
 							</a>
@@ -136,7 +136,7 @@
 
 					<!-- noticia -->
 					<article class="noticia">
-						<figure> 
+						<figure>
 							<a href="">
 								<img src="../imagenes/noticias/windows98_aside_100x63.jpg" alt="Noticia aside">
 							</a>
@@ -151,7 +151,7 @@
 
 					<!-- noticia -->
 					<article class="noticia">
-						<figure> 
+						<figure>
 							<a href="">
 								<img src="../imagenes/noticias/vim_aside_100x63.png" alt="Noticia aside">
 							</a>
@@ -186,7 +186,7 @@
 					<article class="campo centrado video">
 						<video controls>
 							<source src="../videos/whatis_gnu-linux.ogv">
-							<source src="../videos/whatis_gnu-linux.mp4">
+							<!-- <source src="../videos/whatis_gnu-linux.mp4"> -->
 							Tu navegador no soporta los videos
 						</video>
 					</article>
@@ -204,7 +204,7 @@
 					<article class="campo centrado video">
 						<video controls>
 							<source src="../videos/fs_and_4freedoms.ogv">
-							<source src="../videos/fs_and_4freedoms.mp4">
+							<!-- <source src="../videos/fs_and_4freedoms.mp4"> -->
 							Tu navegador no soporta los videos
 						</video>
 					</article>
@@ -222,7 +222,7 @@
 					<article class="campo centrado video">
 						<video controls>
 							<source src="../videos/fs_in_schools.ogv">
-							<source src="../videos/fs_in_schools.mp4">
+							<!-- <source src="../videos/fs_in_schools.mp4"> -->
 							Tu navegador no soporta los videos
 						</video>
 					</article>
@@ -238,7 +238,7 @@
 						<article class="centrado campo video">
 							<video controls>
 								<source src="../videos/fs_song.ogv">
-								<source src="../videos/fs_song.mp4">
+								<!-- <source src="../videos/fs_song.mp4"> -->
 								Tu navegador no soporta los videos
 							</video>
 						</article>
@@ -280,7 +280,7 @@
 						</p>
 						<audio controls>
 							<source src="../audios/fs_song_metal.ogg">
-							<source src="../audios/fs_song_metal.mp3">
+							<!-- <source src="../audios/fs_song_metal.mp3"> -->
 							Tu navegador no soporta los audios
 						</audio>
 					</article>
@@ -292,7 +292,7 @@
 
 						<audio controls>
 							<source src="../audios/fs_song_rythmic.ogg">
-							<source src="../audios/fs_song_rythmic.mp3">
+							<!-- <source src="../audios/fs_song_rythmic.mp3"> -->
 							Tu navegador no soporta los audios
 						</audio>
 					</article>
@@ -303,7 +303,7 @@
 						</p>
 						<audio controls>
 							<source src="../audios/fs_song_rock.ogg">
-							<source src="../audios/fs_song_rock.mp3">
+							<!-- <source src="../audios/fs_song_rock.mp3"> -->
 							Tu navegador no soporta los audios
 						</audio>
 					</article>
@@ -349,24 +349,24 @@
 
 				<!-- ENLACES -->
 				<section id="enlaces" class="width-100">
-					<article class="texto-centrado"> 
-						<a class="enlace" href="">QUIENES SOMOS</a> 
+					<article class="texto-centrado">
+						<a class="enlace" href="">QUIENES SOMOS</a>
 					</article>
 					<article class="guion chr-blanco"> - </article>
-					<article class="texto-centrado"> 
-						<a class="enlace" href="">AVISO LEGAL</a> 
+					<article class="texto-centrado">
+						<a class="enlace" href="">AVISO LEGAL</a>
 					</article>
 					<article class="guion chr-blanco"> - </article>
-					<article class="texto-centrado"> 
-						<a class="enlace" href="./licencia.html" target="_blank">LICENCIA</a> 
+					<article class="texto-centrado">
+						<a class="enlace" href="./licencia.html" target="_blank">LICENCIA</a>
 					</article>
 					<article class="guion chr-blanco"> - </article>
-					<article class="texto-centrado"> 
-						<a class="enlace" href="">POLÍTICA DE COOKIES</a> 
-					</article> 
+					<article class="texto-centrado">
+						<a class="enlace" href="">POLÍTICA DE COOKIES</a>
+					</article>
 					<article class="guion chr-blanco"> - </article>
-					<article class="texto-centrado"> 
-						<a class="enlace" href="./html/formulario.html">CONTACTO</a> 
+					<article class="texto-centrado">
+						<a class="enlace" href="./html/formulario.html">CONTACTO</a>
 					</article>
 				</section>
 
